<resources>
    <string name="app_name">CardGame</string>
    <string name="textview">TextView</string>
    <string name="welcome">Welcome!</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="email">Email:</string>
    <string name="new_user">New User?</string>
    <string name="register">Register</string>
    <string name="new_user_registration">New User Registration</string>
    <string name="last_name">Last Name:</string>
    <string name="rEmail">Email:</string>
    <string name="first_name">First Name:</string>
    <string name="rPassword">Password:</string>
    <string name="birthday_mm_dd_yyy">Birthday (MM/DD/YYY):</string>
    <string name="sign_up">Sign Up!</string>
    <string name="quiz_game">Quiz Game!!</string>
    <string name="newark">Newark</string>
    <string name="continu">Continue</string>
    <string name="radiobutton">RadioButton</string>
    <string name="njCapital">2. What is the captial of New Jersey?</string>
    <string name="Nycaptial">1. What is the captial of New York?</string>
    <string name="syracuse">Syracuse</string>
    <string name="albany">Albany</string>
    <string name="brooklyn">Brooklyn</string>
    <string name="trenton">Trenton</string>
    <string name="altantic_city">Altantic City</string>
    <string name="what_is_the_capital_of_france">What is the capital of France?</string>
    <string name="which_of_these_are_in_eurpoe">Which of these are in Eurpoe?</string>
    <string name="burma">Burma</string>
    <string name="greece">Greece</string>
    <string name="munich">Munich</string>
    <string name="poland">Poland</string>
    <string name="bavaria">Bavaria</string>
    <string name="germany">Germany</string>
    <string name="denmark">Denmark</string>
    <string name="evaluate">Evaluate</string>
    <string name="sicily_is_an_island_to_the_of_italy">Sicily is an island to the __ of Italy</string>
    <string name="in_which_country_is_frankfurt">In which country is Frankfurt?</string>
    <string name="hessia">Hessia</string>
    <string name="north">north</string>
    <string name="what_is_the_captial_of_germany">What is the captial of Germany?</string>
    <string name="west">west</string>
    <string name="south">south</string>
    <string name="east">east</string>
    <string name="luxembourg">Luxembourg</string>
    <string name="camden">Camden</string>
    <string name="nyack">Nyack</string>
    <string name="which_of_these_are_in_new_jersey">Which of these are in New Jersey?</string>
    <string name="morristown">Morristown</string>
    <string name="which_city_is_in_montana">Which city is in Montana?</string>
    <string name="helena">Helena</string>
    <string name="ottowa">Ottowa</string>
    <string name="sioux_falls">Sioux Falls</string>
    <string name="geography_quiz">Geography Quiz!</string>
    <string name="todo0">TODO</string>
</resources>
