<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".card1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:text="@string/what_is_the_capital_of_france"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/question_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:importantForAutofill="no"
                android:inputType="" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                android:text="@string/which_of_these_are_in_new_jersey"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_2_Camden"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="@string/camden" />

            <CheckBox
                android:id="@+id/question_2_Nyack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="@string/nyack" />

            <CheckBox
                android:id="@+id/question_2_Morristown"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="@string/morristown" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                android:text="@string/sicily_is_an_island_to_the_of_italy"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radio_group_question_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_3_north"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/north" />

                <RadioButton
                    android:id="@+id/question_3_east"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/east" />

                <RadioButton
                    android:id="@+id/question_3_south"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/south" />

                <RadioButton
                    android:id="@+id/question_3_west"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/west" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                android:text="@string/which_city_is_in_montana"
                android:textSize="16sp" />

            <CheckBox
                android:id="@+id/question_4_capital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="@string/helena" />

            <CheckBox
                android:id="@+id/question_4_ottowa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="@string/ottowa" />

            <CheckBox
                android:id="@+id/question_4_falls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="12dp"
                android:text="@string/sioux_falls" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="6dp"
                android:text="@string/in_which_country_is_frankfurt"
                android:textSize="16sp" />

            <RadioGroup
                android:id="@+id/radio_group_question_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_5_germany"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/germany" />

                <RadioButton
                    android:id="@+id/question_5_poland"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="0dp"
                    android:text="@string/poland" />

                <RadioButton
                    android:id="@+id/question_5_denmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="22dp"
                    android:text="@string/denmark" />
            </RadioGroup>

            <Button
                android:id="@+id/evaluate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="22dp"
                android:background="@color/colorAccent"
                android:onClick="startEvaluation"
                android:text="@string/evaluate"
                android:textColor="@android:color/background_light" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:text="Total Score:"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

</LinearLayout>